[package]
name = "smtmv"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SMT model validation using Isabelle/HOL"
homepage = "https://github.com/formalsmt/SMTmv"
repository = "https://github.com/formalsmt/SMTmv"
readme = "readme.md"
keywords = ["Isabelle", "SMT", "Verification"]

[dependencies]
smt2parser = "0.6.1"
itertools = "0.10.5"
clap = {version = "4.0.32", features = ["derive"]}
fs_extra = "1.2.0"
log = "0.4.17"
env_logger = { version = "0.10.0", features = ["auto-color", "humantime", "color"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
isabelle-client = "0.1.0"
tokio = "1.24.2"
tempfile = "3"